--- a/templates/habits.html
+++ b/templates/habits.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <h1>Hello habits!</h1>
-    <ul>
-        <li>Habit 1</li>
-        <li>Habit 2</li>
-        <li>Habit 3</li>
-    </ul>
+    <div class="habitItem">
+        <button>Done!</button>
+        <p>Habit title</p>
+        <ul>
+            <li>💙</li>
+            <li>💙</li>
+            <li>💙</li>
+            <li>💙</li>
+            <li>💙</li>
+            <li>💙</li>
+            <li>💙</li>
+        </ul>
+    </div>
 </body>
 </html>
