--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -122,7 +122,14 @@ header > ul {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: white;
     padding: 8px 5px 8px 5px;
+    
 }
+
+.nav-button {
+    margin-right: 10px; 
+    margin-left: 10px;
+}
+
 
 .navbar a {
     text-decoration: none;
@@ -138,3 +145,9 @@ header > ul {
     font-variant: small-caps;
     margin-left: 30px;
 }
+
+.nav-button {
+    margin-left: 65px;
+    margin-right: 230px; /* Adjust the margin as needed to control spacing */
+}
+
