fixed bugs related to merge

--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <h1>You Have Registered</h1>
-    <a href="habits">See your habits</a>
+    <a href="overview">See your habits</a>
     
 </body>
 </html>
