--- a/flask_app/templates/habits.html
+++ b/flask_app/templates/habits.html
@@ -17,23 +17,22 @@
     </header>
     <main>
         {% for habit in habits %}
+
             <div class="habitItem">
                 <button>Done!</button>
                 <p>{{ habit.title }}</p>
                 <div class="spacer"></div>
                 <div class="streak">
                     <p>{{ habit.streak }}</p>
-                    <img src="static/images/flame_grayscale.png">
+
+                    {% if habit.done %}
+                        <img src="static/images/flame_colored.png">
+                    {% else %}
+                        <img src="static/images/flame_grayscale.png">
+                    {% endif %}
+                    
                 </div>
-            <!-- </div>
-       
-                    <p class="ptitle">
-                        <a class="plink" href="{{ url_for('project_overview', project_id=project.id) }}">
-                            {{ project.title }}
-                        </a>
-                    </p>
-                </b>
-            </div> -->
+
         {% endfor %}
         
     </main>
