add static habit for reference

--- a/flask_app/templates/habits.html
+++ b/flask_app/templates/habits.html
@@ -16,6 +16,18 @@
         <img id="profilePicture" alt="profile picture" src="static/images/flame_colored.png">
     </header>
     <main>
+
+        <!-- Hardcoded habit for reference -->
+        <div class="habitItem">
+            <button>Done!</button>
+            <p>Drink water</p>
+            <div class="spacer"></div>
+            <div class="streak">
+                <p>10</p>
+                <img src="static/images/flame_colored.png">
+            </div>
+        </div>
+
         {% for habit in habits %}
 
             <div class="habitItem">
@@ -32,6 +44,7 @@
                     {% endif %}
                     
                 </div>
+            </div>
 
         {% endfor %}
         
