--- a/flask_app/templates/habits.html
+++ b/flask_app/templates/habits.html
@@ -19,7 +19,17 @@
 
         <!-- Hardcoded habit for reference -->
         <div class="habitItem">
-            <button>Done!</button>
+            <button><img src="static/images/unchecked.png"></button>
+            <p>Drink water</p>
+            <div class="spacer"></div>
+            <div class="streak">
+                <p>10</p>
+                <img src="static/images/flame_colored.png">
+            </div>
+        </div>
+
+        <div class="habitItem checkedOff">
+            <button><img src="static/images/checkmark.png"></button>
             <p>Drink water</p>
             <div class="spacer"></div>
             <div class="streak">
