--- a/flask_app/templates/register.html
+++ b/flask_app/templates/register.html
@@ -48,7 +48,7 @@ Habit Hero Register
                     </ul>
                     {% endif %}
                 </div>
-                <div class="form-group"">{{ form.confirmPassword.label }} {{ form.confirmPassword }}
+                <div class="form-group">{{ form.confirmPassword.label }} {{ form.confirmPassword }}
                     {% if form.confirmPassword.errors %}
                     <ul class="errors">
                         {% for error in form.confirmPassword.errors %}
