--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -26,16 +26,20 @@ Habit Hero Login
         <div class="container">
             <h2 class="title">Login</h2>
             <form method="POST" action="/login">
-                <div class="form-group">{{ form.email.label }} {{ form.email }}
+                <div class="form-group">
+                    {{ form.email.label }} <br>
+                    {{ form.email }}
                     {% if form.email.errors %}
                     <ul class="errors">
                         {% for error in form.email.errors %}
-                            <li>{{ error }}</li>
+                            <li>*{{ error }}</li>
                         {% endfor %}
                     </ul>
                 {% endif %}
             </div>
-            <div class="form-group">{{ form.password.label }} {{ form.password }}
+            <div class="form-group">
+                {{ form.password.label }} <br>
+                {{ form.password }}
                 {% if form.password.errors %}
                     <ul class="errors">
                         {% for error in form.password.errors %}
