--- a/flask_app/templates/register.html
+++ b/flask_app/templates/register.html
@@ -12,47 +12,57 @@ Habit Hero Register
         <div class="container">
             <h2 class="title">Register</h2>
             <form method="POST" action="/register">
-                <div class="form-group">{{ form.firstname.label }} {{ form.firstname }}
+                <div class="form-group">
+                    {{ form.firstname.label }} <br>
+                    {{ form.firstname }}
                     {% if form.firstname.errors %}
                     <ul class="errors">
                         {% for error in form.firstname.errors %}
-                        <li>{{ error }}</li>
+                        <li>*{{ error }}</li>
                         {% endfor %}
                     </ul>
                     {% endif %}
                 </div>
-                <div class="form-group">{{ form.lastname.label }} {{ form.lastname }}
+                <div class="form-group">
+                    {{ form.lastname.label }} <br>
+                    {{ form.lastname }}
                     {% if form.lastname.errors %}
                     <ul class="errors">
                         {% for error in form.lastname.errors %}
-                        <li>{{ error }}</li>
+                        <li>*{{ error }}</li>
                         {% endfor %}
                     </ul>
                     {% endif %}
                 </div>
-                <div class="form-group">{{ form.email.label }} {{ form.email }}
+                <div class="form-group">
+                    {{ form.email.label }} <br>
+                    {{ form.email }}
                     {% if form.email.errors %}
                     <ul class="errors">
                         {% for error in form.email.errors %}
-                        <li>{{ error }}</li>
+                        <li>*{{ error }}</li>
                         {% endfor %}
                     </ul>
                     {% endif %}
                 </div>
-                <div class="form-group">{{ form.password.label }} {{ form.password }}
+                <div class="form-group">
+                    {{ form.password.label }} <br>
+                    {{ form.password }}
                     {% if form.password.errors %}
                     <ul class="errors">
                         {% for error in form.password.errors %}
-                        <li>{{ error }}</li>
+                        <li>*{{ error }}</li>
                         {% endfor %}
                     </ul>
                     {% endif %}
                 </div>
-                <div class="form-group">{{ form.confirmPassword.label }} {{ form.confirmPassword }}
+                <div class="form-group">
+                    {{ form.confirmPassword.label }} <br>
+                    {{ form.confirmPassword }}
                     {% if form.confirmPassword.errors %}
                     <ul class="errors">
                         {% for error in form.confirmPassword.errors %}
-                        <li>{{ error }}</li>
+                        <li>*{{ error }}</li>
                         {% endfor %}
                     </ul>
                     {% endif %}
