I MADE CREATE HABITS
IM THE BEST!!!

--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -1,7 +1,7 @@
 /* styles.css */
-* { 
+* {
     margin: 0;
-    padding: 0; 
+    padding: 0;
     box-sizing: border-box;
 }
 
@@ -12,7 +12,7 @@
     --purple: #AE76A6;
 
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
+}
 
 .spacer {
     flex-grow: 1;
@@ -73,7 +73,6 @@ header > ul {
 
 #profilePicture {
     max-width: 30px;
-   
     object-fit: cover;
     border-radius: 100%;
     outline: solid 1px lightgray;
@@ -113,9 +112,6 @@ header > ul {
 }
 
 
-
-
-
 .navbar {
     background-color: lightslategray;
     font-size: 1em;
@@ -126,7 +122,7 @@ header > ul {
 }
 
 .nav-button {
-    margin-right: 10px; 
+    margin-right: 10px;
     margin-left: 10px;
 }
 
@@ -189,4 +185,73 @@ header > ul {
 .landingabout p{
     color: #AE76A6;
     font-size: 18px;
+}
+
+
+/* Button used to open the habit form */
+.open-button {
+background-color: #555;
+color: white;
+padding: 16px 20px;
+border: none;
+cursor: pointer;
+opacity: 0.8;
+/*position: fixed;*/
+display: flex;
+align-items: center;
+
+}
+
+/* The popup form - hidden by default */
+.form-popup {
+display: none;
+position: fixed;
+justify-content: center;
+right: 15px;
+border: 3px solid #f1f1f1;
+z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container {
+max-width: 300px;
+padding: 10px;
+background-color: white;
+}
+
+/* Full-width input fields */
+.form-container input[type=text], .form-container input[type=password] {
+width: 100%;
+padding: 15px;
+margin: 5px 0 22px 0;
+border: none;
+background: #f1f1f1;
+}
+
+/* When the inputs get focus, do something */
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+background-color: #ddd;
+outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+background-color: #04AA6D;
+color: white;
+padding: 16px 20px;
+border: none;
+cursor: pointer;
+width: 100%;
+margin-bottom:10px;
+opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel {
+background-color: red;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover {
+opacity: 1;
 }
