--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -16,11 +16,11 @@ Habit Hero Login
     <link rel="stylesheet" href="{{ url_for('static', filename='homestyle.css') }}">
 </head>
 
-    <a href="habits">See your habits</a>
+    <!--<a href="habits">See your habits</a>-->
  
 
 
-        <h1 class="welcome4">Welcome {% if user %}{{user}}{% endif %}to the  Habit Hero App!</h1>
+        <h1 class="welcome4 title">Welcome {% if user %}{{user}}{% endif %}to the  Habit Hero App!</h1>
         <h3>{{ message }}</h3>
 
         <div class="container">
