fixed some small spacing issues in login/register

--- a/flask_app/templates/register.html
+++ b/flask_app/templates/register.html
@@ -13,7 +13,7 @@ Habit Hero Register
             <h2 class="title">Register</h2>
             <form method="POST" action="/register">
                 <div class="form-group">
-                    {{ form.firstname.label }} <br>
+                    {{ form.firstname.label }}
                     {{ form.firstname }}
                     {% if form.firstname.errors %}
                     <ul class="errors">
@@ -24,7 +24,7 @@ Habit Hero Register
                     {% endif %}
                 </div>
                 <div class="form-group">
-                    {{ form.lastname.label }} <br>
+                    {{ form.lastname.label }}
                     {{ form.lastname }}
                     {% if form.lastname.errors %}
                     <ul class="errors">
@@ -35,7 +35,7 @@ Habit Hero Register
                     {% endif %}
                 </div>
                 <div class="form-group">
-                    {{ form.email.label }} <br>
+                    {{ form.email.label }}
                     {{ form.email }}
                     {% if form.email.errors %}
                     <ul class="errors">
@@ -46,7 +46,7 @@ Habit Hero Register
                     {% endif %}
                 </div>
                 <div class="form-group">
-                    {{ form.password.label }} <br>
+                    {{ form.password.label }}
                     {{ form.password }}
                     {% if form.password.errors %}
                     <ul class="errors">
@@ -57,7 +57,7 @@ Habit Hero Register
                     {% endif %}
                 </div>
                 <div class="form-group">
-                    {{ form.confirmPassword.label }} <br>
+                    {{ form.confirmPassword.label }}
                     {{ form.confirmPassword }}
                     {% if form.confirmPassword.errors %}
                     <ul class="errors">
