--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -27,7 +27,7 @@ Habit Hero Login
             <h2 class="title">Login</h2>
             <form method="POST" action="/login">
                 <div class="form-group">
-                    {{ form.email.label }} <br>
+                    {{ form.email.label }}
                     {{ form.email }}
                     {% if form.email.errors %}
                     <ul class="errors">
@@ -38,7 +38,7 @@ Habit Hero Login
                 {% endif %}
             </div>
             <div class="form-group">
-                {{ form.password.label }} <br>
+                {{ form.password.label }}
                 {{ form.password }}
                 {% if form.password.errors %}
                     <ul class="errors">
