add (class="submit_button") to form submit buttons

--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -48,7 +48,7 @@ Habit Hero Login
                     </ul>
                     {% endif %}
                 </div>
-                {{ form.submit }}
+                {{ form.submit(class="submit_button") }}
             </form>
           </div>
        </div>
