--- a/flask_app/templates/register.html
+++ b/flask_app/templates/register.html
@@ -67,7 +67,7 @@ Habit Hero Register
                     </ul>
                     {% endif %}
                 </div>
-                {{ form.submit }}
+                {{ form.submit(class="submit_button") }}
             </form>
 
         </div>
