coment out welcome message and center login/reg

--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -18,10 +18,10 @@ Habit Hero Login
 
     <!--<a href="habits">See your habits</a>-->
  
-
+<!-- 
 
         <h1 class="welcome4 title">Welcome {% if user %}{{user}}{% endif %}to the  Habit Hero App!</h1>
-        <h3>{{ message }}</h3>
+        <h3>{{ message }}</h3> -->
 
         <div class="container">
             <h2 class="title">Login</h2>
