--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -138,6 +138,11 @@ header > ul {
     background-color: var(--whitepurple);
     width: 40vw;
     margin: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
     padding: 20px; /* Increase padding for better spacing */
 }
 
