--- a/flask_app/templates/register.html
+++ b/flask_app/templates/register.html
@@ -6,8 +6,8 @@ Habit Hero Register
 
 {% block content %}
 
-      <h1 class="welcome4 title">Welcome {% if user %}{{user}}{% endif %}to the Habit Hero App!</h1>
-        <h3>{{ message }}</h3>
+      <!-- <h1 class="welcome4 title">Welcome {% if user %}{{user}}{% endif %}to the Habit Hero App!</h1>
+        <h3>{{ message }}</h3> -->
 
         <div class="container">
             <h2 class="title">Register</h2>
