--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -200,9 +200,18 @@ form * {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     padding: 10px 20px; /* Increase padding for better spacing */
 }
-
+.navbar h1{
+    color: white;
+    float: left;
+    width: 25%;
+    text-align: center;
+    margin: 0 15px;
+    text-decoration: none;
+    font-size: 25px;
+}
 .nav-button {
     margin-left: 30px; /* Adjust margin for proper spacing */
 }
@@ -215,6 +224,9 @@ form * {
     text-decoration: none;
     color: white;
     margin: 0 15px; /* Add some horizontal margin to space out links */
+    float: left;
+    width: 25%;
+    text-align: center;
 }
 
 .navbar-brand {
