--- a/flask_app/templates/habits.html
+++ b/flask_app/templates/habits.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <header>
-        <h1>Habit Hero</h1>
-        <ul>
-            <li>My Habits</li>
-            <li>Habitats</li>
-        </ul>
-        <img id="profilePicture" alt="profile picture" src="static/images/flame_colored.png">
-    </header>
+        <div class="navbar">
+            <a href="{{url_for('home')}}">Home</a>
+            <a href="">My Habits</a>
+            <h1>Habit Hero</h1>
+            <a href="">Habitats</a>
+            <a href="{{url_for('logout')}}">Logout</a>
+            <img id="profilePicture" alt="profile picture" src="static/images/flame_colored.png">
+        </div>
     <main>
 
 <!-- <div class="popup" id="popup">
