--- a/flask_app/templates/home.html
+++ b/flask_app/templates/home.html
@@ -9,6 +9,7 @@
     <div class="navbar">
         <a href="{{url_for('home')}}">Home</a>
         <a href="{{url_for('aboutUs')}}">About Us</a>
+        <h1>Habit Hero</h1>
         <a href="{{url_for('login')}}">Login</a>
         <a href="{{url_for('register')}}">Register</a>
     </div>
