--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -10,6 +10,7 @@
         <div class="navbar">
             <a href="{{url_for('home')}}">Home</a>
             <a href="{{url_for('aboutUs')}}">About Us</a>
+            <h1>Habit Hero</h1>
             {% if user %}
                 <a href="{{url_for('logout')}}">Logout</a>
             {% else %}
