styling changes to about us page

--- a/flask_app/templates/aboutUs.html
+++ b/flask_app/templates/aboutUs.html
@@ -6,26 +6,14 @@ About Us
 
 {% block content %}
 
-        <div class="aboutdiv">
+        <div class="container">
 
-            <h1 class="welcome2 title">ABOUT US</h1>
-            </div>
-            <div class="about">
-               
-
-                <h3>Habit Hero Team </h3>
-
-
-                <p>Although most people recognize the benefit of forming good habits, the positive effects of those good habits are often only recognizable weeks, months, or even years after they are already formed.
-                    Because it is hard to see the short-term value of good habits, it is very common to give up on a good habit before those positive effects have the chance to develop.
-                    People also give up on habits easily because habits are usually personal goals with no accountability on whether they stick with them or they don’t.
-                    
-                    When we feel that goals are imposed on us, we lose the drive to reach those goals, and we hit a level of emotional exhaustion that causes us to lose motivation leading to burnout.
-                    In order to circumvent this we have decided to design our business model to promote healthy competition and collaboration. 
-                    Competition not only teaches valuable life skills such as time management or planning but it also encourages teamwork and camaraderie. 
-                    When given enough time and motivation, patterns form, both in behavior and in the brain. Habit Hero can make it extremely beneficial to break into a new habit or goal that is incentivized through its numerous features involving competition, collaboration, and rewards. 
-                    </p>
-            </div>
+            <h1>ABOUT US</h1>
+            <p>
+                Although most people recognize the benefit of forming good habits, the positive effects of those good habits are often only recognizable weeks, months, or even years after they are already formed.
+                Because it is hard to see the short-term value of good habits, it is very common to give up on a good habit before those positive effects have the chance to develop.
+                All of us here at Habit Hero aim to fix that by providing a place to stay accountable to your habits, all while having fun with a little healthy competition.
+            </p>
         </div>
     
 
