styling remove habit button

--- a/flask_app/templates/habits.html
+++ b/flask_app/templates/habits.html
@@ -96,7 +96,7 @@
 
             </div>
 
-            <button type="submit" class="btn" onclick="removeHabit('{{ habit.id }}')">Remove</button>
+            <button type="submit" class="btn" onclick="removeHabit('{{ habit.id }}')"><img id="delete_habit" src="static/images/remove.png" ></button>
 
         </div>
 
