--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -39,8 +39,7 @@ header li, header a {
     font-size: 20px;
     font-weight: 500;
     align-items: center;
-    
-    
+
 }
 
 a:hover {
@@ -123,6 +122,11 @@ header > ul {
 	font: inherit;
 	cursor: pointer;
 	outline: inherit;
+}
+
+#delete_habit {
+    max-width: 15px;
+    max-height: 15px;
 }
 
 /* Login/register css code */
