register error message fixed

--- a/flask_app/templates/home.html
+++ b/flask_app/templates/home.html
@@ -22,9 +22,16 @@
         <p>Get ready to enhance your postive habits with friends!</p>
 
 
-        <form method="POST" action="{{ url_for('register') }}">
+       <!-- <form method="POST" action="{{ url_for('register') }}">
             <input type="submit" value="Join Now">
-        </form>
+        </form>-->
+        
+
+        <div class = "joinnow">
+            <a href="{{ url_for('register') }}">Join Now</a>
+        </div>
+        
+
         <div class="landingabout">
             <h3>Our Goal</h3>
             <p>We want to create an environment that promotes the creation of better habits. There's no better motivator than your friends.</p>
