delete extra images folder

--- a/flask_app/templates/habits.html
+++ b/flask_app/templates/habits.html
@@ -15,7 +15,7 @@
             <h1>Habit Hero</h1>
             <a href="">Habitats</a>
             <a href="{{url_for('logout')}}">Logout</a>
-            <img id="profilePicture" alt="profile picture" src="static/images/flame_colored.png">
+            <img id="profilePicture" alt="profile picture" src="static/images/profile_default.jpeg">
         </div>
     <main>
 
