--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -75,8 +75,7 @@ header > ul {
     max-width: 30px;
     object-fit: cover;
     border-radius: 100%;
-    outline: solid 1px lightgray;
-    box-shadow: 0px 0px 5px lightgray;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
     /* margin: 20px; */
 }
 
