Irrelevant Commit (Do not use)
Don't use

--- a/flask_app/templates/home.html
+++ b/flask_app/templates/home.html
@@ -18,7 +18,7 @@
     </div>
     <div class="landingmain">
         <h1>Become The Hero You Need</h1>
-        <p>Get ready to enhance your postive habits with friends!</p>
+        <p>Get ready to enhance your positive habits with friends!</p>
 
 
         <form method="POST" action="{{ url_for('register') }}">
