--- a/flask_app/Static/styles.css
+++ b/flask_app/Static/styles.css
@@ -21,6 +21,7 @@
 
 body {
     background-color: var(--lightpurple);
+    height: 100%;
 }
 
 main {
@@ -374,4 +375,32 @@ button {
 /* Add some hover effects to buttons */
 .form-container .btn:hover, .open-button:hover {
     opacity: 1;
+}
+
+
+/* Habitats Page */
+.container_with_sidebar {
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+}
+
+.sidebar {
+    width: 400px;
+    max-width: 30%;
+}
+
+.habitat_view {
+    right: 0;
+    min-width: 70%;
+    background-color: var(--offwhite);
+    
+}
+
+.centered {
+    display: flex;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
 }
