--- a/flask_app/templates/habits.html
+++ b/flask_app/templates/habits.html
@@ -11,9 +11,9 @@
 <body>
         <div class="navbar">
             <a href="{{url_for('home')}}">Home</a>
-            <a href="">My Habits</a>
+            <a href="{{url_for('createhabits')}}">My Habits</a>
             <h1>Habit Hero</h1>
-            <a href="">Habitats</a>
+            <a href="{{url_for('habitats')}}">Habitats</a>
             <a href="{{url_for('logout')}}">Logout</a>
             <img id="profilePicture" alt="profile picture" src="static/images/profile_default.jpeg">
         </div>
