--- a/flask_app/templates/layout.html
+++ b/flask_app/templates/layout.html
@@ -12,6 +12,7 @@
             <a href="{{url_for('aboutUs')}}">About Us</a>
             <h1>Habit Hero</h1>
             {% if user %}
+                <a href="{{url_for('habitats')}}">Habitats</a>
                 <a href="{{url_for('logout')}}">Logout</a>
             {% else %}
                 <a href="{{url_for('login')}}">Login</a>
